--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "trialsamhan1"
-version = "1.0.3"
+version = "1.0.4"
 description = "Analyze solar curtailment of a certain site in a certain date"
 readme = "README.md"
 authors = [{ name = "Naomi Stringer, Baran Yildiz, Timothy Klymenko, M. Syahman Samhan", email = "m.samhan@student.unsw.edu.au" }]
@@ -28,7 +28,7 @@ requires-python = ">=3.7"
 
 
 [tool.bumpver]
-current_version = "1.0.3"
+current_version = "1.0.4"
 version_pattern = "MAJOR.MINOR.PATCH"
 commit_message  = "bump version {old_version} -> {new_version}"
 commit          = true
@@ -40,7 +40,7 @@ push            = false
         'current_version = "{version}"',
         'version = "{version}"',
     ]
-    "src/__init__.py" = ["{version}"]
+    "src\__init__.py" = ["{version}"]
 
 [tool.isort]
 profile                   = "black"
